<resources>
    <string name="app_name">Contact Manager</string>
    <string name="splash_text">Contact Manager</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_don_t_have_an_account_sign_in">I don\'t have an account? Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="contact_added_successfully">Contact Added Successfully</string>
    <string name="add">Add</string>
    <string name="add_contact">Add Contact</string>
    <string name="welcome_to_contact_manager_app">Welcome to Contact Manager App</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="enter_your_name">Enter Your Name</string>
</resources>