<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_contact_manager_app"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/add_contact"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:padding="15dp" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/enter_your_number"
            android:inputType="number"
            android:padding="15dp"
            app:passwordToggleEnabled="true" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="@drawable/btn_background"
            android:padding="12dp"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>